--- a/sections/product-template-baking-mixes.liquid
+++ b/sections/product-template-baking-mixes.liquid
@@ -143,7 +143,7 @@
       <div class="product-single__meta">
 		
        
-        	<h1 itemprop="name" class="product-single__title" data-vendor="{{ product.vendor }}">{{ product.title }}</h1>
+        	<h1 itemprop="name" class="product-single__title">{{ product.title }}</h1>
       {% if product.tags contains 'mix' %}
 
  <br> <h2 style="text-align:left;text-transform:none;"></h2>
