--- a/sections/product-template.liquid
+++ b/sections/product-template.liquid
@@ -143,7 +143,7 @@
       <div class="product-single__meta">
 		
        
-        	<h1 itemprop="name" class="product-single__title" data-vendor="{{ product.vendor }}">{{ product.title }}</h1>
+        	<h1 itemprop="name" class="product-single__title">{{ product.title }}</h1>
         
 
         {% if section.settings.show_vendor %}
